<resources>
    <string name="app_name">MyDemo</string>

    <string name="Describe">Hello World</string>
    <string name="Kotlin">Kotlin</string>
    <string name="Java">Java</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="close">关闭</string>


    <string name="DescribeWebView">WebView页面</string>
    <string name="DescribeRichText">富文本</string>
    <string name="DescribeRichTextDesc">可以滑动</string>
    <string name="tv_1">小号</string>
    <string name="tv_2">标准</string>
    <string name="tv_3">大号</string>
    <string name="tv_4">超大</string>
    <string name="DescribeRVGetData">取值</string>
    <string name="DescribeRVGetAll">全选</string>
    <string name="DescribeRVGetUnAll">取消</string>
    <string name="DescribeBottomDialog">底部弹窗,测试通过or驳回</string>
    <string name="DescribeTestGlide">测试UtilsLibiary库的Glide  正常加载</string>
    <string name="DescribeTestGlidePl">测试UtilsLibiary库的Glide  带占位图的</string>
    <string name="DescribeTestGlideErr">测试UtilsLibiary库的Glide  带错误图的</string>
    <string name="DescribeTestGlideGif">测试UtilsLibiary库的Glide  gif图片</string>
    <string name="DescribeTestGlideRound">测试UtilsLibiary库的Glide  圆形图片</string>
    <string name="DescribeTestGlideCorens">测试UtilsLibiary库的Glide  圆角图片</string>
    <string name="DescribeTestSelectImageOrVideo">测试UtilsLibiary库的SelectImage</string>
    <string name="Describe_picker_image_single_camera">单选图片 带相机</string>
    <string name="Describe_picker_image_single_nocamera">单选图片 不带相机</string>
    <string name="Describe_picker_image_multiple_camera">多选图片 带相机</string>
    <string name="Describe_picker_image_multiple_camera_max">多选图片 带相机 一次性最大张数</string>
    <string name="Describe_picker_image_multiple_nocamera">多选图片 不带相机</string>
    <string name="Describe_picker_image_multiple_nocamera_max">多选图片 不带相机  一次性最大张数</string>
    <string name="Describe_picker_video_single_camera">选择视频 带相机</string>
    <string name="Describe_picker_video_single_nocamera">选择视频 不带相机</string>
    <string name="stateTV">审核通过</string>
    <string name="resultTV">审核驳回</string>
    <string name="score">请评分</string>
    <string name="DescribeKeyBoard">软键盘的弹出隐藏页面</string>
    <string name="DescribeKeyBoardET">这是一个测试软键盘的弹出隐藏</string>
    <string name="DescribeKeyBoardETDesc">测试防止被软键盘顶起布局</string>
    <string name="DescribeKeyBoardCompileTV">编辑</string>
    <string name="DescribePopUp">弹出</string>
    <string name="DescribeTestTag">纯文本话题测试</string>
    <string name="DescribeTestStartActivity">替换StartActivityForResult过时方法</string>
    <string name="DescribeTestKotlin">Kotlin语法练习</string>
    <string name="DescribeTestViewPager2">Tab+ViewPager</string>
    <string name="DescribeTestMMKV">MMKV</string>
    <string name="DescribeTestVerification">正方形验证码</string>
    <string name="DescribeTestRecyclerviewDraggable">RecyclerView拖拽排序</string>
    <string name="DescribeTestLogin">登录界面</string>
    <string name="DescribeTestTlVp">TabLayout+ViewPager+侧滑删除</string>
    <string name="jump">跳转</string>
    <string name="jump1">传值跳转</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="SayWhat">toDaySayWhat? </string>
    <string name="View">View</string>
    <string name="java_date_utils">时间工具类</string>
    <string name="java_get_current_millis">获取当前时间戳</string>
    <string name="java_get_current_alldate">获取当前时间</string>
    <string name="java_get_dateToStamp">将时间转换为时间戳</string>
    <string name="java_get_getNowDate">获取当前的时间</string>
    <string name="starbar">星级评分</string>
    <string name="PathText">文字路径的绘制</string>
    <string name="TestSurfaceView">SurfaceView播放视频</string>
    <string name="Testorlin">竖向物流时间轴</string>
    <string name="TestHorlin">横向物流时间轴</string>
    <string name="DescribeText">文本展开和收回</string>
    <string name="LifeCycleText">LifeCycle</string>
    <string name="SaveImageText">保存图片到相册\n兼容Android 12</string>
    <string name="home_title">首页</string>
    <string name="home_mine">我的</string>
    <string name="home_discover">发现</string>

    <string name="social_contract">收起</string>
    <string name="social_expend">展开</string>
    <string name="social_text_target">网页链接</string>
    <!-- 选择对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>
    <string name="custom_title">自定义UI</string>
    <string name="scan_tip">放入框内，自动扫描</string>
    <string name="register"><u>注册</u></string>
    <string name="passwordLogin"><u>密码登录</u></string>
    <string name="VerificationLogin"><u>验证码登录</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>