<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/name_dp20">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_01"
            style="@style/tv_style"
            android:text="@string/DescribeWebView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_02"
            style="@style/tv_style"
            android:text="@string/DescribeKeyBoard" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_03"
            style="@style/tv_style"
            android:text="@string/DescribeRichText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_04"
            style="@style/tv_style"
            android:text="@string/DescribeBottomDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_05"
            style="@style/tv_style"
            android:text="@string/DescribeTestGlide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_06"
            style="@style/tv_style"
            android:text="@string/DescribeTestSelectImageOrVideo" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_07"
            style="@style/tv_style"
            android:text="@string/DescribeTestTag" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_08"
            style="@style/tv_style"
            android:text="@string/DescribeTestStartActivity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_10"
            style="@style/tv_style"
            android:text="@string/DescribeTestKotlin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_11"
            style="@style/tv_style"
            android:text="@string/DescribeTestViewPager2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_12"
            style="@style/tv_style"
            android:text="@string/DescribeTestMMKV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_14"
            style="@style/tv_style"
            android:text="@string/SayWhat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_15"
            style="@style/tv_style"
            android:text="@string/View" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_16"
            style="@style/tv_style"
            android:text="@string/java_date_utils" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_17"
            style="@style/tv_style"
            android:text="@string/PathText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_18"
            style="@style/tv_style"
            android:text="@string/TestSurfaceView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_19"
            style="@style/tv_style"
            android:text="@string/TestHorlin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_21"
            style="@style/tv_style"
            android:text="@string/DescribeText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_22"
            style="@style/tv_style"
            android:text="@string/LifeCycleText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_23"
            style="@style/tv_style1"
            android:text="@string/SaveImageText" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
