<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.JavaActivity">

    <com.scwang.smart.refresh.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_utils"
            style="@style/tv_style"
            android:text="@string/java_date_utils" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/java_2"
            style="@style/tv_style"
            android:text="@string/PathText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/java_3"
            style="@style/tv_style"
            android:text="@string/TestSurfaceView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/java_4"
            style="@style/tv_style"
            android:text="@string/Testorlin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/java_5"
            style="@style/tv_style"
            android:text="@string/TestHorlin" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.scwang.smart.refresh.footer.ClassicsFooter
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.scwang.smart.refresh.layout.SmartRefreshLayout>