<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.PickViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/name_dp20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_single_camera" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_single_nocamera" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv3"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_multiple_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv4"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_multiple_camera_max" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv5"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_multiple_nocamera" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv6"
                style="@style/tv_style3"
                android:layout_weight="1"
                android:text="@string/Describe_picker_image_multiple_nocamera_max" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>