<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".java.ui.date.DateUtilsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/java_tv_1"
        style="@style/tv_style1"
        android:text="@string/java_get_current_millis" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/java_tv_2"
        style="@style/tv_style1"
        android:text="@string/java_get_current_alldate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/java_tv_3"
        style="@style/tv_style1"
        android:text="@string/java_get_current_alldate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/java_tv_4"
        style="@style/tv_style1"
        android:text="@string/java_get_getNowDate" />

</LinearLayout>