<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".kotlin.ui.activity.TestGlideActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlide" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlidePl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv3"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlideErr" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv4"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlideGif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv5"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlideRound" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv6"
        style="@style/tv_style2"
        android:text="@string/DescribeTestGlideCorens" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/name_dp20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg1"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg2"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg3"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/name_dp20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg4"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg5"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg6"
            android:layout_width="@dimen/name_dp100"
            android:layout_height="@dimen/name_dp100"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/name_dp20"
            app:layout_constraintHorizontal_weight="1" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>