<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kotlin.ui.activity.KeyBoard">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/DescribeKeyBoardET"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/compileTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/key_tv_shape"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/DescribeKeyBoardCompileTV"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color00BCD4"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/DescribeKeyBoardETDesc"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>