<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stateTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="20dp"
        android:background="@color/colorF8F8F8"
        android:gravity="center"
        android:text="@string/stateTV"
        android:textColor="@color/color3E3E3F"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/resultTV"
        android:textColor="@color/colorBBBBBB"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/stateTV" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorEBEBEB"
        app:layout_constraintTop_toBottomOf="@id/resultTV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/name_dp60"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color3D3D3D"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>