<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kotlin.RecyclerView.RecyclerViewActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/get_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/color3D3D3D"
            android:text="@string/DescribeRVGetData" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/get_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/color3D3D3D"
            android:text="@string/DescribeRVGetAll" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/get_unall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/color3D3D3D"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DescribeRVGetUnAll" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        tools:listitem="@layout/recycler_view_item" />

</androidx.constraintlayout.widget.ConstraintLayout>