<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="@dimen/name_dp40"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/color3D3D3D"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color979797"
        app:layout_constraintTop_toBottomOf="@id/score" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/color3E3E3F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.zhang.mydemo.ui.widget.SimpleRatingBar
            android:id="@+id/startbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:grade="5"
            app:gradeCount="5"
            app:gradeHeight="25dp"
            app:gradeSpace="@dimen/name_dp12"
            app:gradeStep="one"
            app:gradeWidth="@dimen/name_dp25"
            app:layout_constraintEnd_toStartOf="@id/number"
            app:layout_constraintStart_toEndOf="@id/score1"
            app:layout_constraintTop_toTopOf="@id/score1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="5分"
            android:textColor="@color/color3E3E3F"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/startbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/startbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="@dimen/name_dp10"
            android:background="@drawable/cancel_solid_stroke_shape"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color3D3D3D"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/name_dp10"
            android:background="@drawable/cancel_solid_stroke_005bab_shape"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toBottomOf="@id/number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>